--- a/frontend/src/pages/login/login.page.css
+++ b/frontend/src/pages/login/login.page.css
@@ -4,3 +4,12 @@
     justify-content: center;
     height: 100vh;
 }
+
+.login-container {
+    display: grid;
+    row-gap: 24;
+}
+
+.form-title {
+    font-weight: medium;
+}
