--- a/frontend/src/pages/administration/components/users/users.component.css
+++ b/frontend/src/pages/administration/components/users/users.component.css
@@ -14,7 +14,7 @@
 
 .users-data-table-container {
     display: flex;
-    height: calc(100vh - 64px - 48px - 48px - 24px - 48px - 24px)
+    min-height: calc(100vh - 64px - 48px - 48px - 24px - 48px - 24px)
 }
 
 .MuiFab-extended.add-fab-button {
