--- a/frontend/src/pages/administration/components/alarms/alarms.component.css
+++ b/frontend/src/pages/administration/components/alarms/alarms.component.css
@@ -32,3 +32,9 @@
     display: flex;
     min-height: calc(100vh - 64px - 48px - 48px - 24px);
 }
+
+.title-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
