--- a/frontend/src/pages/goto/components/division-card.component.css
+++ b/frontend/src/pages/goto/components/division-card.component.css
@@ -2,6 +2,7 @@
     height: 10px;
     width: 10px;
     border-radius: 50%;
+    margin: 12px;
 }
 
 .alarm-state-container.off {
@@ -21,10 +22,26 @@
 }
 
 .division-card {
-    transition: all 250ms ease;
+    transition: all 0.25s ease !important;
 }
 
 .division-card:hover {
     cursor: pointer;
     transform: translateY(-4px);
+}
+
+.division-content {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+}
+
+.division-name-container {
+    display: flex;
+    gap: 8px;
+    align-items: center;
+}
+
+.MuiDivider-fullWidth.division-card-divider {
+    margin: 8px 0px;
 }
