--- a/frontend/src/pages/login/login.page.css
+++ b/frontend/src/pages/login/login.page.css
@@ -13,3 +13,10 @@
 .form-title {
     font-weight: medium;
 }
+
+.logo-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
